Add structured Port type for EXPOSE instruction
Parse port specifications into a structured Docker.Port type that
exposes start/end port numbers, protocol (TCP/UDP), and convenience
methods like isRange() and isVariable(). This enables recipe authors
to work with port data directly rather than parsing raw text.

The Port type preserves the original text for lossless round-tripping
while providing parsed values when available (null for env variables).

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>